# isw-company-similarity

./: .flaskenv  .gitattributes  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  openapi.json  postgresql.conf  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  test.yml
alembic/: env.py
alembic/versions/: 20251004_0950_initial_migration_with_company_model.py  20251004_1101_add_companyfacts_table.py  20251004_1152_add_companyfacts_table_with_constraints.py  20251006_0930_add_pgvector_extension.py  20260129_1015_initial_schema.py  20260129_1430_add_multi_jurisdiction_support.py  20260131_0900_rename_to_entities.py  20260131_1400_add_revenue_currency_fields.py  20260131_1430_add_revenue_source_tag.py
experiments/data/: buckets.json  cache.csv
experiments/notebook/: edgar.ipynb
isw/applications/: api.py  cli.py  worker.py
isw/core/commands/: base.py  executor.py
isw/core/commands/auth/: refresh_session_token.py
isw/core/commands/company/: get_companies.py  get_company.py  get_company_reports.py  get_report_anomalies.py  get_similar_companies.py
isw/core/commands/entity/: __init__.py  add_entity.py  delete_entity.py  get_entities.py  get_entity.py  search_entities.py  update_entity.py
isw/core/commands/onboarding/: get_textlayer_core.py  invite.py  list_textlayer_core_versions.py
isw/core/commands/recruitment/: analyze_candidate_resume.py  candidate_stage_change.py  cleanup_technical_submission.py  convert_candidate_resume.py  create_candidate.py  create_job.py  create_jobs_index.py  download_technical_submission.py  generate_technical_submission_request.py  get_application_details.py  get_candidate_details.py  get_job_details.py  remove_job.py  search_jobs.py  update_candidate_notes.py  update_job.py  upload_technical_submission.py
isw/core/commands/research/: generate_research_paper_insights.py  search_research_papers.py
isw/core/commands/threads/: get_models.py  process_chat_message.py
isw/core/commands/webooks/: validate.py
isw/core/commands/workflows/: run_evals.py  sync_prompts.py  update_prompts.py
isw/core/controllers/: auth_controller.py  base.py  company_controller.py  entity_controller.py  onboarding_controller.py  recruitment_controller.py  research_controller.py  thread_controller.py  webhooks_controller.py  workflows_controller.py
isw/core/errors/: __init__.py  authentication.py  authorization.py  base.py  classifier.py  not_found.py  processing.py  service.py  validation.py
isw/core/models/: base.py  company_models.py  entity_models.py
isw/core/schemas/: base.py  company_schema.py  entity_schema.py  onboarding_schemas.py  recruitment_schemas.py  research_schemas.py  routes_schema.py  thread_schemas.py  utils.py  workflows_schemas.py
isw/core/services/: vector_search.py
isw/core/services/anomaly_detection/: __init__.py  service.py
isw/core/services/ats/: __init__.py  ashby.py
isw/core/services/cache/: __init__.py  decorator.py  redis.py
isw/core/services/data_sources/: __init__.py  base.py  edgar_data_source.py  esef_data_source.py  factory.py  parsers.py
isw/core/services/database/: __init__.py  exceptions.py  models.py  service.py
isw/core/services/doppler/: __init__.py  service.py
isw/core/services/jwt/: jwt.py  (+1 more)
isw/core/tools/: __init__.py  think.py
isw/core/utils/: factory.py  helpers.py  keyword.py  matchers.py  prompts.py  query_builder.py  text.py
isw/experiments/notebook/: .env.example  companyfacts_unique.csv
isw/interfaces/api/: __init__.py
isw/interfaces/cli/: __init__.py  cli.py  evals.py  recruitment.py
isw/interfaces/worker/: __init__.py  handlers.py  registry.py
isw/shared/config/: __init__.py  base.py  celery_adapter.py  cli_adapter.py  flask_adapter.py
isw/shared/logging/: logger.py
isw/templates/emails/: onboarding.html  onboarding.txt
isw/templates/html/: __init__.py  candidate_note.html
isw/templates/prompts/: __init__.py  correctness_judge.md  research_insights.md  resume_extraction_experience.md  resume_extraction_flags.md  resume_extraction_qualifications.md  resume_grader.md  resume_parser.md  summary_judge.md
tests/: __init__.py  conftest.py
tests/evaluations/: base.py  test_research_paper_insights.py  test_resume.py  test_resume_extraction_experience.py  test_resume_extraction_flags.py  test_resume_extraction_qualifications.py  test_resume_parser.py
tests/fixtures/: __init__.py
tests/fixtures/applications/: application.json
tests/fixtures/data_sources/: __init__.py
tests/fixtures/entity_collection/: __init__.py  esef_filings_invalid_lei.json  esef_filings_response.json  sec_submission_apple.json  sec_submission_no_10k.json  sec_submission_old_10k.json
tests/fixtures/entity_registry/: __init__.py
tests/fixtures/entity_storage/: __init__.py
tests/fixtures/jobs/: ai_engineer.json  exec_assistant.json
tests/fixtures/mocks/: __init__.py
tests/integration/core/: __init__.py
tests/shared/unit/: test_configuration.py
tests/unit/core/: test_architectural_patterns.py  test_command_controller_flow.py  test_error_classification.py
(+248 files in other folders)
