[project]
name = "isw-company-similarity"
version = "0.1.0"
description = "ISW Company Similarity"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask==2.2.5",
    "flask-cors==5.0.0",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.16.5",
    "psycopg2-binary>=2.9.10",
    "pgvector>=0.3.0",
    "marshmallow==3.26.1",
    "marshmallow-enum>=1.5.1",
    "pydantic==2.10.3",
    "click==8.1.8",
    "celery>=5.5.3",
    "redis>=6.2.0",
    "kombu>=5.5.4",
    "python-dotenv==1.0.1",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.1.1",
    "requests>=2.32.4",
    "ruff==0.11.0",
    "coverage==7.6.12",
    "pytest-xdist>=3.8.0",
    "fakeredis>=2.31.0",
    "ipykernel>=6.30.1",
]

[tool.ruff]
# Same as Black.
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Enable comprehensive linting rules
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
ignore = [
    "B012", # `break` inside `finally` blocks cause exceptions to be silenced
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__ files

[tool.ruff.lint.isort]
known-first-party = ["isw"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Enable auto-formatting
line-ending = "auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["isw"]

[project.scripts]
isw-company-similarity-cli = "isw.applications.cli:cli"
